2022-12-12  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha03: FOMO';git push
	git tag -a 5.1.4-alpha03 -m '';git push --tags

	* Exclude vertical dimensions from allowed horizontal dimensions

	* Interpolate interface and midpoint depth fields to same 1D output grid

2022-12-11  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha02: Humerus';git push
	git tag -a 5.1.4-alpha02 -m 'all: no cmp NC_STRING, NC_VLEN; ncremap: dpt ntp, drv mlc dpt_ntf';git push --tags

	* nco_ntp_vrt() produces reasonable-looking 3D -> 1D depth interpolation

2022-12-10  Charlie Zender  <zender@uci.edu>

	* nco_ntp_vrt() creates legible (though incorrect) output files!

	* Check for presence of run-time extensive variables adding to exclusion list

2022-12-08  Charlie Zender  <zender@uci.edu>

	* Include depth in min/max vertical coordinate search

	* Construct maxLevelCell if necessary

2022-12-04  Charlie Zender  <zender@uci.edu>

	* Read dpt_in from external, functionalize nco_xtr_var_get()

2022-12-02  Charlie Zender  <zender@uci.edu>

	* Add stubs to handle (MPAS) depth-coordinate grids

2022-11-30  Charlie Zender  <zender@uci.edu>

	* Explicitly disallow compression of variable-length types

2022-11-29  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.4-alpha01: Seal Bottling';git push
	git tag -a 5.1.4-alpha01 -m 'Functionally identical to 5.1.3. all: NCO_ERR_FL_LN';git push --tags

	* Add Add NCO_ERR_FL_LN macro for automatic file/line debugging info, start to use in nco_map.c

	* nco_grd_nfr(): Check bnd_dmn_nm existance before access, prevent segfault inferring unstructured grids

2022-11-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.3: Mauna Loa';git push